day2/11_deployment/resolved_tasks/task_5/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    projekt: python
spec:
  selector:
    app: python
  ports:
  - port: 80
    name: api
    targetPort: api
  type: ClusterIP
