day2/11_deployment/resolved_tasks/task_5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nbvh-ing
  labels:
    projekt: python
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/info
spec:
  ingressClassName: nginx
  rules:
  - host: python.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              name: api
